cassandra/java-client/cassandra-demo-client.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-demo-client-service
  labels:
    app: cassandra-demo-client
  namespace: pks-workshop
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cassandra-demo-client-app
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cassandra-demo-client-app
  labels:
    app: cassandra-demo-client
  namespace: pks-workshop
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: cassandra-demo-client-app
    spec:
      containers:
      - name: cassandra-demo-client-app
        image: jaimegag/cassandra-demo
        ports:
        - containerPort: 8080
