cassandra/java-client/cassandra-demo-client-istio.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-demo-client-service-istio
  labels:
    app: cassandra-demo-client
  namespace: pks-workshop
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cassandra-demo-client-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cassandra-demo-client-app
  labels:
    app: cassandra-demo-client
  namespace: pks-workshop
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: cassandra-demo-client-app
    spec:
      containers:
      - name: cassandra-demo-client-app
        image: jaimegag/cassandra-demo-istio
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cassandra-demo-client-gateway
  namespace: pks-workshop
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cassandra-demo-client-virtualservice
  namespace: pks-workshop
spec:
  hosts:
  - "*"
  gateways:
  - cassandra-demo-client-gateway
  http:
  - match:
    - uri:
        prefix: /cassandra
    route:
    - destination:
        host: cassandra-demo-client-service-istio
        port:
          number: 80
